--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "marx-css": "^3.0.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.0",
     "http-server": "^0.11.1"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/tajakobsen/a11y-workshop.git"
+    "type": "git",
+    "url": "https://github.com/tajakobsen/a11y-workshop.git"
   }
 }
